--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -7,6 +7,16 @@
   <p>by {{ post.author.username }} | {{ post.published_date }}</p>
   <div>{{ post.content|linebreaks }}</div>
 
+  <!-- Display tags -->
+  <p>Tags:
+    {% for tag in post.tags.all %}
+      <a href="{% url 'blog:posts-by-tag' tag.name %}">{{ tag.name }}</a>{% if not forloop.last %}, 
+{% endif %}
+    {% empty %}
+      No tags
+    {% endfor %}
+  </p>
+
   {% if user.is_authenticated and user == post.author %}
     <p>
       <a href="{% url 'blog:post-update' post.pk %}">Edit</a> |
