--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -1,3 +1,8 @@
+<form method="get" action="{% url 'blog:post-list' %}">
+    <input type="text" name="q" placeholder="Search posts..." value="{{ request.GET.q }}">
+    <button type="submit">Search</button>
+</form>
+
 {% extends "base.html" %}
 {% block title %}All Posts{% endblock %}
 
