--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -10,8 +10,7 @@
   <!-- Display tags -->
   <p>Tags:
     {% for tag in post.tags.all %}
-      <a href="{% url 'blog:posts-by-tag' tag.name %}">{{ tag.name }}</a>{% if not forloop.last %}, 
-{% endif %}
+      <a href="{% url 'blog:posts-by-tag' tag.slug %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
     {% empty %}
       No tags
     {% endfor %}
